--- a/radek556.pl/mplayer/index.html
+++ b/radek556.pl/mplayer/index.html
@@ -13,7 +13,7 @@
     <!-- top section -->
     <div class="top_section">
   		<h5>Lord Santos - 2022, Moss - 2023&nbsp;&nbsp;<i class="fa fa-headphones" aria-hidden="true"></i></h5>
-<h5>‎soon more&nbsp;&nbsp;</h5>
+<h5>‎if sound is glitched WAIT!&nbsp;&nbsp;</h5>
     <div class="gruz">                                 <form alt="CLICK ME" action="bio/index.html">
 								<button class="button-53" role="button" alt="CLICK ME">CLICK ME</button>
 								</form></div>
