--- a/radek556.pl/index.html
+++ b/radek556.pl/index.html
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                         <div class="date_of_creation">
-                            <h1 class="category_title">DISCORD MEMBER SINCE</h1>
+                            <h1 class="category_title">DISCORD MEMBER SINCE (1ST ACC)</h1>
                             <span>Jul 02, 2016</span>
                         </div>
                         <div class="spotify">
